# logic-asts

./: .envrc.recommended  .gitignore  AGENTS.md  Makefile  README.md  justfile  pixi.toml  pyproject.toml
.github/workflows/: pypi.yml
docs/: api.rst  conf.py  index.rst
src/logic_asts/: __init__.py  base.py  ltl.py  propositional_logic.lark  propositional_logic.py  psl.py  sere.py  spec.py  stl_go.py  strel.py  utils.py
src/logic_asts/grammars/: __init__.py  base.lark  ltl.lark  psl.lark  sere.lark  stl_go.lark  strel.lark
tests/: test_base_logic.py  test_ltl.py  test_ltl_parsing.py  test_ltl_strong_weak.py  test_membership_predicates.py  test_psl.py  test_roundtrip.py  test_sere.py  test_spot_compatibility.py  test_stl_go.py  test_strel.py  test_type_guards.py
