[project]
name = "logic-asts"
version = "1.5.3"
description = "Grammars and parsers for various logic"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anand Balakrishnan", email = "anandbala1597@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["attrs>=25.3.0", "lark>=1.2.2", "typing-extensions>=4.13.0"]

[dependency-groups]
test = ["pytest", "pytest-mypy", "hypothesis"]
docs = ["myst-parser", "sphinx"]
dev = [
  "basedpyright",
  "ipython",
  "rich",
  "mypy",
  "pyrefly",
  "ruff",
  "rust-just",
  "ty",
  "zuban",
  { include-group = "test" },
  { include-group = "docs" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".jj"]

[tool.uv]
exclude-newer = "30 days"
# managed = false

[tool.pytest]
addopts = ["--import-mode=importlib", "--doctest-modules", "--mypy"]
testpaths = ["tests", "src"]

[tool.mypy]
strict = true
files = ["src/", "tests/"]
exclude = ["^build/"]
show_error_codes = true
namespace_packages = false

[tool.ruff]
line-length = 127

[tool.ruff.lint]
extend-select = ["E", "F", "W", "N", "B", "ANN", "PYI", "I"]
extend-ignore = ["F722", "PYI041"]

[tool.ruff.lint.extend-per-file-ignores]
"*.py" = ["B905", "E203", "E501", "W291", "W293"]
"*.pyi" = ["B", "E501", "E701"]

[tool.pyright]
pythonVersion = "3.10"
include = ["src", "tests"]
pythonPlatform = "All"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportUnreachable = false
reportUnnecessaryComparison = false
reportImportCycles = false
reportUnknownLambdaType = false
