[project]
name = "logic-asts"
version = "1.7.2"
description = "Grammars and parsers for various logic"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anand Balakrishnan", email = "anandbala1597@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["attrs>=25.3.0", "lark>=1.2.2", "typing-extensions>=4.13.0"]

[dependency-groups]
test = ["pytest", "hypothesis", "pytest-timeout"]
docs = ["myst-parser", "sphinx"]
dev = [
  "basedpyright",
  "ipython",
  "rich",
  "mypy",
  "pyrefly",
  "ruff",
  "rust-just",
  "ty",
  "zuban",
  { include-group = "test" },
  { include-group = "docs" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".jj"]

[tool.uv]
exclude-newer = "30 days"
# managed = false

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.pypi-dependencies]
logic-asts = { path = ".", editable = true }

[tool.pixi.feature.spot-test.dependencies]
spot = "*"

[tool.pixi.environments]
default = { features = [
  "dev",
  "test",
  "docs",
  "spot-test",
], solve-group = "default" }


[tool.pytest]
addopts = ["--import-mode=importlib", "--doctest-modules"]
testpaths = ["tests", "src"]

[tool.zuban]
mode = "default"
# Recommended (and the default) for untyped code
untyped_strict_optional = true
# Mypy's default is "any", Zuban's "inferred"
untyped_function_return_mode = "inferred"
# Zuban's reachability analysis treats a class pattern (e.g. `case TimeInterval(None,
# None)`) as exhausting the whole type, ignoring restrictive sub-patterns, so it
# flags later match-cases as unreachable. These are false positives (mypy disagrees),
# so disable the check globally rather than scattering per-line ignores.
disable_error_code = ["unreachable"]

[tool.mypy]
strict = true
files = ["src/", "tests/"]
exclude = ["^build/"]
show_error_codes = true
namespace_packages = false
mypy_path = ["$MYPY_CONFIG_FILE_DIR/typings/"]

[[tool.mypy.overrides]]
module = ["spot"]
ignore_missing_imports = true

[tool.ruff]
line-length = 127

[tool.ruff.lint]
extend-select = ["E", "F", "W", "N", "B", "ANN", "PYI", "I"]
extend-ignore = ["F722", "PYI041"]

[tool.ruff.lint.extend-per-file-ignores]
"*.py" = ["B905", "E203", "E501", "W291", "W293"]
"*.pyi" = ["B", "E501", "E701"]

[tool.pyright]
pythonVersion = "3.12"
include = ["src", "tests"]
pythonPlatform = "All"
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportUnreachable = false
reportUnnecessaryComparison = false
reportImportCycles = false
reportUnknownLambdaType = false
enableTypeIgnoreComments = true
reportUnnecessaryTypeIgnoreComment = false
